--- a/server_backend/.env.example
+++ b/server_backend/.env.example
@@ -1,14 +1,13 @@
-# Database connection string for MySQL using Prisma.
-# Replace placeholder values or ensure the deployment agent maps these correctly.
-# Format: mysql://USER:PASSWORD@HOST:PORT/DATABASE
-DATABASE_URL="mysql://username:password@localhost:3306/furniro"
+# Database
+DATABASE_URL="mysql://username:password@host:3306/furniro"
 
-# JWT secret for signing tokens (backend auth flows will use this).
-JWT_SECRET="replace_with_a_secure_random_secret"
+# Auth
+JWT_SECRET="your_secure_secret"
 
-# Node environment (development|production|test)
-NODE_ENV="development"
+# Server
+PORT=3001
+HOST=0.0.0.0
+NODE_ENV=development
 
-# Server host/port can be configured by the runtime environment if needed
-# HOST="0.0.0.0"
-# PORT="3001"
+# CORS
+CORS_ORIGINS="*"
